--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 feature_image: feature-comp
-title: Just Sudo IT
+title: Just sudo IT
 desc: Short stories from around the campfire for a fellow world explorer.
 include_cta_btn: true
 cta_text: Newsletter
