--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 feature_image: feature-comp
 title: Just sudo IT
-desc: Short stories from around the campfire for a fellow world explorer.
+desc: Dev lines from a coding novice toiling to become a ninja.
 include_cta_btn: true
 cta_text: Newsletter
 cta_link: /about/
