Up and running.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 feature_image: feature-comp
 title: Just sudo IT
 desc: Dev lines from a coding novice toiling to become a&nbsp;ninja.
-include_cta_btn: true
+include_cta_btn: false
 cta_text: Newsletter
 cta_link: /about/
 cta_icon: fa-user-plus
