--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: home
 feature_image: feature-comp
 title: Just sudo IT
 desc: Dev lines from a coding novice toiling to become a&nbsp;ninja.
-include_cta_btn: false
-cta_text: Newsletter
-cta_link: /about/
-cta_icon: fa-user-plus
+include_cta_btn: true
+cta_text: RSS
+cta_link: /feed.xml/
+cta_icon: fa-rss
 ---
