--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: Just sudo IT
 desc: Dev lines from a coding novice toiling to become a&nbsp;ninja.
 include_cta_btn: true
 cta_text: RSS
-cta_link: /feed.xml/
+cta_link: /feed.xml
 cta_icon: fa-rss
 ---
